force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__AdvancementGraduationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdvancementGraduationDate__c</fullName>
    <label>Advancement Graduation Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdvancementGraduationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>