force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__AverageOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageOrderAmount__c</fullName>
    <label>Average Order Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageOrderAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>