force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__DoesPreferSustainableProduct__c.field-meta.xml
<CustomField>
    <fullName>ssot__DoesPreferSustainableProduct__c</fullName>
    <label>Prefer Sustainable Product</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DoesPreferSustainableProduct</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>