force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__EducationalAdvancementType__c.field-meta.xml
<CustomField>
    <fullName>ssot__EducationalAdvancementType__c</fullName>
    <label>Educational Advancement Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EducationalAdvancementType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>