force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__HasFerpaParentalDisclosure__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasFerpaParentalDisclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FERPA Parental Disclosure</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasFerpaParentalDisclosure</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>