force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__IsFirstGenerationStudent__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsFirstGenerationStudent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Generation Student</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsFirstGenerationStudent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>