force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__MilitaryBranch__c.field-meta.xml
<CustomField>
    <fullName>ssot__MilitaryBranch__c</fullName>
    <label>Military Branch</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MilitaryBranch</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>