force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__Race__c.field-meta.xml
<CustomField>
    <fullName>ssot__Race__c</fullName>
    <label>Race</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Race</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>